Avoid map highlighting when clicking on mobile

--- a/app/javascript/app/components/map/map-styles.scss
+++ b/app/javascript/app/components/map/map-styles.scss
@@ -7,7 +7,11 @@
   cursor: grab;
 
   &.notDraggable {
-    cursor: pointer;
+    cursor: default;
+
+    @media #{$tablet-landscape} {
+      cursor: pointer;
+    }
   }
 }
 
